--- a/Passenger.Infrastructure/Passenger.Infrastructure.csproj
+++ b/Passenger.Infrastructure/Passenger.Infrastructure.csproj
@@ -11,7 +11,9 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Autofac" Version="4.6.1"/>
-    <PackageReference Include="Newtonsoft.Json" Version="10.0.01" />
     <PackageReference Include="AutoMapper" Version="6.1.1"/>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="1.1.1"/>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="1.1.1"/>
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.01" />
   </ItemGroup>
 </Project>
