--- a/Passenger.Api/Passenger.Api.csproj
+++ b/Passenger.Api/Passenger.Api.csproj
@@ -24,6 +24,7 @@
     <PackageReference Include="Autofac" Version="4.6.1"/>
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.2.0"/>
     <PackageReference Include="AutoMapper" Version="6.1.1"/>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="1.1.2"/>
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics" Version="1.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Routing" Version="1.0.3" />
