--- a/Passenger.Tests.EndToEnd/Passenger.Tests.EndToEnd.csproj
+++ b/Passenger.Tests.EndToEnd/Passenger.Tests.EndToEnd.csproj
@@ -6,7 +6,9 @@
     <PackageId>Passenger.Tests.EndToEnd</PackageId>
     <NetStandardImplicitPackageVersion>1.6.1</NetStandardImplicitPackageVersion>
   </PropertyGroup>
-
+  <ItemGroup>
+    <Content Include="appsettings.json" CopyToOutputDirectory="PreserveNewest" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Passenger.Api\Passenger.Api.csproj" />
     <ProjectReference Include="..\Passenger.Infrastructure\Passenger.Infrastructure.csproj" />
@@ -15,6 +17,7 @@
   <ItemGroup>
     <PackageReference Include="Autofac" Version="4.6.1"/>
     <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="1.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="1.1.2"/>
     <PackageReference Include="Newtonsoft.Json" Version="10.0.01" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0" />
     <PackageReference Include="xunit" Version="2.2.0" />
