Cusom exceptions, advanced logging with NLog

--- a/Passenger.Api/Passenger.Api.csproj
+++ b/Passenger.Api/Passenger.Api.csproj
@@ -15,7 +15,11 @@
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </None>
   </ItemGroup>
-
+  <ItemGroup>
+    <None Update="nlog.config">
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </None>
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Passenger.Infrastructure\Passenger.Infrastructure.csproj" />
   </ItemGroup>
@@ -39,6 +43,9 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="1.1.1" />
     <PackageReference Include="Microsoft.VisualStudio.Web.BrowserLink" Version="1.0.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.01" />
+    <PackageReference Include="Nlog.Extensions.Logging" Version="1.0.0-*" />
+    <PackageReference Include="Nlog.Web.AspNetCore" Version="4.*" />
   </ItemGroup>
 
   <Target Name="PrepublishScript" BeforeTargets="PrepareForPublish">
