--- a/Passenger.Tests.EndToEnd/Passenger.Tests.EndToEnd.csproj
+++ b/Passenger.Tests.EndToEnd/Passenger.Tests.EndToEnd.csproj
@@ -10,6 +10,9 @@
     <Content Include="appsettings.json" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="nlog.config" CopyToOutputDirectory="PreserveNewest" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\Passenger.Api\Passenger.Api.csproj" />
     <ProjectReference Include="..\Passenger.Infrastructure\Passenger.Infrastructure.csproj" />
   </ItemGroup>
